@@ -301,6 +301,11 @@ EMAIL_LIMIT_STATUS_MSG      Y;
 ### default of zero means to not apply any throttling.
 EMAIL_THROTTLE              0;
 
+### Append a header field to outgoing email alerts. This can allow the
+### outgoing 'From' field to be customized for example:
+### EMAIL_APPEND_HEADER     From:you@somehost;
+EMAIL_APPEND_HEADER         NONE;
+
 ### If "Y", send email for all newly logged packets from the same
 ### source ip instead of just when a danger level increases.
 ALERT_ALL                   Y;
