@@ -61,6 +61,7 @@ EMAIL_LIMIT                 0;
 ENABLE_EMAIL_LIMIT_PER_DST  N;
 EMAIL_LIMIT_STATUS_MSG      Y;
 EMAIL_THROTTLE              0;
+EMAIL_APPEND_HEADER         NONE;
 ALERT_ALL                   Y;
 IMPORT_OLD_SCANS            N;
 SYSLOG_IDENTITY             psad;
